<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <ImageView
        android:id="@+id/device_wave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/device_searching"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/device_wave2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/device_searching"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/device_wave3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/device_searching"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/device_wave4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/device_searching"
        android:contentDescription="@null" />
    
    <TextView 
        android:id="@+id/device_current_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/device_current_wifi"
        android:textColor="@color/text_color_normal"
        android:textSize="10sp"
        />
    
    <TextView 
        android:id="@+id/device_no_ret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:text="@string/device_scan_no_ret"
        android:textColor="@color/text_color_normal"
        android:textSize="12sp"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/device_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/title_bt_close_states"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/device_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/device_search"
        android:text="@string/device_search"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>